--- a/Reservation/Views/Home/VerifyPayment.cshtml
+++ b/Reservation/Views/Home/VerifyPayment.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/custom-animations.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link href="/assets/css/rtl.css" rel="stylesheet" />
-
+    
 
 </head>
 
@@ -93,7 +93,7 @@
                     <br>
                 </div>
 
-               
+
             </div>
         </div>
     </section>
@@ -117,6 +117,7 @@
     <script type="text/javascript" src="/assets/js/modal-box.js"></script>
     <script src="~/assets/js/jquery.countdown.js"></script>
     <script src="~/js/Site.js"></script>
+    <script src="~/js/VerifyPayment.js"></script>
 
 
 </body>
