--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -69,9 +69,9 @@
     <header class="header header-black fixed" style="min-height: 100px;">
         <div class="header-wrapper">
             <div class="container">
-                <div class="col-sm-2 col-xs-12 navigation-header">
+                <div class="col-sm-2 col-xs-12 navigation-header" style="padding: 0px !important;">
                     <a href="#" class="logo">
-                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" width="119" height="17" class="retina-hide">
+                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" style="width: 100px; height: 100px;"  class="retina-hide">
                     </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                         <span class="icon-bar"></span>
