--- a/Reservation/wwwroot/assets/css/style.css
+++ b/Reservation/wwwroot/assets/css/style.css
@@ -2604,7 +2604,7 @@ h4,
 h5,
 h6,
 .h7 {
-    font-family: "PT Sans Caption", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: mellatweb-isans !important;
     font-weight: 700;
 }
 
@@ -2612,12 +2612,12 @@ h1,
 h2,
 h4,
 h5 {
-    letter-spacing: -0.06em;
+    letter-spacing: 0em;
 }
 
 h3,
 .h8 {
-    font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-family: mellatweb-isans !important;
     font-weight: 400;
 }
 
@@ -7748,7 +7748,7 @@ button[type="submit"] .loading {
     font-size: 11px;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 0.26em;
+    letter-spacing: 0em;
     color: #262627;
     border-style: solid;
     border-width: 0 0 2px;
@@ -7780,7 +7780,7 @@ button[type="submit"] .loading {
     }
 
     .navigation-link {
-        letter-spacing: 0.13em;
+        letter-spacing: 0em;
     }
 }
 
@@ -7819,7 +7819,7 @@ button[type="submit"] .loading {
 
 @media (min-width: 768px) and (max-width: 991px) {
     .navigation-link {
-        letter-spacing: 0.15em;
+        letter-spacing:0;
     }
 }
 
