--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
 
             <div class="container">
                 <h5 class="heading-alt" style="margin-bottom: 8px;">
-                    شانزده آبان 1399
+                    بیست و سوم آبان 1399
                     &nbsp; &nbsp; &nbsp; &nbsp;   <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span>
                     تهران- سالن همایش های بین المللی صدا و سیما
                     <span class="fa fa-calendar-o base-clr-txt"></span>
@@ -55,8 +55,9 @@
                     <img src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="400" height="400" class="img-responsive">
                 </div>
 
-                <h6 class="extra-heading">شوالیه مدیران برتر</h6>
-                <h6 class="thin base-font">همایش بزرگ مدیریت</h6>
+                <h6 class="extra-heading">شوالیه </br>مدیران برتر</h6>
+                </br>
+                <h6 class="thin base-font">همایش سراسری مدیریت</h6>
                 <div class="btns-container">
                     <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
                     <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
