--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -69,9 +69,9 @@
     <header class="header header-black fixed" style="min-height: 100px;">
         <div class="header-wrapper">
             <div class="container">
-                <div class="col-sm-2 col-xs-12 navigation-header">
+                <div class="col-sm-2 col-xs-12 navigation-header" style="padding: 0;">
                     <a href="#" class="logo">
-                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" width="39" height="32" class="retina-hide">
+                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" style="height: 100px; width: 100px;" class="retina-hide">
                     </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                         <span class="icon-bar"></span>
@@ -135,7 +135,7 @@
                     </span>
                     <ul class="nav nav-tabs">
 
-                        <li>
+                        @*<li>
                             <a href="#horizontal_tab1" data-toggle="tab">
                                 <h6 class="heading-alt"><span class=""></span> </h6>
                             </a>
@@ -145,7 +145,7 @@
                             <a href="#horizontal_tab2" data-toggle="tab">
                                 <h6 class="heading-alt"><span class=""></span> </h6>
                             </a>
-                        </li>
+                        </li>*@
 
                         <li class="active">
                             <a href="#horizontal_tab3" data-toggle="tab">
@@ -277,7 +277,7 @@
         <div class="container">
 
             <h5 class="heading-alt" style="font-family:mellatweb-isans !important;">شمارش معکوس همایش سراسری شوالیه مدیران برتر</h5>
-           
+
 
             <!-- Countdown start -->
             <div class="row counters-wrapper countdown">
@@ -495,9 +495,9 @@
                 <div class="nav-wrapper">
                     <span class="nav-current"><h5 class="highlight">Day 1</h5><p class="text-alt">08/10/2016</p></span><ul class="nav nav-schedule">
                         <!--<li class="active"><a href="#day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">08/10/2016</p></a></li>
-                <li><a href="#day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">09/10/2016</p></a></li>
-                <li><a href="#day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">10/10/2016</p></a></li>
-                <li><a href="#day4" data-toggle="tab"><h5 class="highlight">Day 4</h5><p class="text-alt">11/10/2016</p></a></li>-->
+                        <li><a href="#day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">09/10/2016</p></a></li>
+                        <li><a href="#day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">10/10/2016</p></a></li>
+                        <li><a href="#day4" data-toggle="tab"><h5 class="highlight">Day 4</h5><p class="text-alt">11/10/2016</p></a></li>-->
                         <li class="active"><a href="#day5" data-toggle="tab"><h5 class="highlight">برنامه ها</h5></a></li>
                     </ul>
                 </div>
@@ -800,10 +800,10 @@
             </div>
             <!-- Schedule end
 
-                <div class="col-sm-12 align-center">
-                    <a href="elements/schedule.html" target="_blank" class="btn btn-outline-clr btn-md">SCHEDULE STYLES</a>
-                </div>
-    -->
+                        <div class="col-sm-12 align-center">
+                            <a href="elements/schedule.html" target="_blank" class="btn btn-outline-clr btn-md">SCHEDULE STYLES</a>
+                        </div>
+            -->
         </div>
 
     </section>
@@ -825,14 +825,14 @@
             </div>
         </div>
     </section>-->
-     
+
     <section id="prices" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-shopping-04"></span>
             <h3>بلیط ها</h3>
             <p class="text-alt">نوع بلیط خود را انتخاب کنید</p>
             <br>
-            
+
             <div class="row">
                 <div class="col-sm-4">
                     <div class="package-column">
@@ -840,7 +840,7 @@
                         <div class="package-price">
                             <span class="currency">$</span>33
                         </div>
-                        
+
 
                         <div class="package-detail">
                             <ul>
@@ -891,7 +891,7 @@
         </div>
     </section>
 
- 
+
 
     <section id="register" class="section overlay overlay-clr bg-cover bg4 light-text align-center">
         <div class="container">
@@ -954,13 +954,13 @@
         <div class="contacts-wrapper">
             <div id="contacts-map" class="map" data-settings="map-settings.json" style="height:560px;"></div>
 
-            <div class="container contacts-on-map-container">
+            <div class="container contacts-on-map-container" style="direction: rtl;">
                 <div class="contacts-on-map">
                     <h3>آدرس</h3>
                     <ul class="list">
                         <li><i class="fa fa-map-marker"></i>تبریز- چایکنار- روبروی شهرداری منطقه یک- طبقه نه</li>
                         <li><i class="fa fa-envelope"></i>event@negahglobal.com</li>
-                        <li><i class="fa fa-phone"></i>(+98) 33377911</li>
+                        <li><i class="fa fa-phone"></i>33377911 (+98)</li>
                         <li><i class="fa fa-clock-o"></i>8:00 - 22:00</li>
                     </ul>
                 </div>
