--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -34,12 +34,11 @@
     <section id="hero" class="hero-section bg1 bg-cover window-height light-text" style="min-height: 920px; padding-top: 138.5px; padding-bottom: 0px;">
 
         <ul class="socials-nav">
-            <li class="socials-nav-item"><a href="#"><span class="fa fa-twitter"></span></a></li>
-            <li class="socials-nav-item"><a href="#"><span class="fa fa-facebook"></span></a></li>
-            <li class="socials-nav-item"><a href="#"><span class="fa fa-github"></span></a></li>
-            <li class="socials-nav-item"><a href="#"><span class="fa fa-vimeo-square"></span></a></li>
-            <li class="socials-nav-item"><a href="#"><span class="fa fa-google-plus"></span></a></li>
-            <li class="socials-nav-item"><a href="www.instagram.com/negah_event"><span class="fa fa-instagram"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.twitter.com/negah_event"><span class="fa fa-twitter"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.facebook.com/negah_event"><span class="fa fa-facebook"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.linkedin.com/company/negah-event"><span class="fa fa-linkedin"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.youtube.com/negah_event"><span class="fa fa-youtube"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.instagram.com/negah_event"><span class="fa fa-instagram"></span></a></li>
         </ul>
 
         <div class="heading-block centered-block align-center">
@@ -51,13 +50,10 @@
                     تهران- سالن همایش های بین المللی صدا و سیما
                     <span class="fa fa-calendar-o base-clr-txt"></span>
                 </h5>
-                <div class="col-sm-5 img-column">
-                    <img src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="400" height="400" class="img-responsive">
-                </div>
-
-                <h6 class="extra-heading">شوالیه </br>مدیران برتر</h6>
                 </br>
-                <h6 class="thin base-font">همایش سراسری مدیریت</h6>
+                <center><img src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="350" height="350" class="img-responsive"></center>
+
+                
                 <div class="btns-container">
                     <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
                     <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
@@ -72,7 +68,7 @@
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header" style="padding: 0;">
                     <a href="#" class="logo">
-                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" style="height: 100px; width: 100px;" class="retina-hide">
+                        <img src="/assets/img/ventcamp_logo.png" alt="همایش نگاه" style="height: 100px; width: 115px;" class="retina-hide">
                     </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                         <span class="icon-bar"></span>
@@ -137,16 +133,16 @@
                     <ul class="nav nav-tabs">
 
                         @*<li>
-                            <a href="#horizontal_tab1" data-toggle="tab">
-                                <h6 class="heading-alt"><span class=""></span> </h6>
-                            </a>
-                        </li>
+                                <a href="#horizontal_tab1" data-toggle="tab">
+                                    <h6 class="heading-alt"><span class=""></span> </h6>
+                                </a>
+                            </li>
 
-                        <li>
-                            <a href="#horizontal_tab2" data-toggle="tab">
-                                <h6 class="heading-alt"><span class=""></span> </h6>
-                            </a>
-                        </li>*@
+                            <li>
+                                <a href="#horizontal_tab2" data-toggle="tab">
+                                    <h6 class="heading-alt"><span class=""></span> </h6>
+                                </a>
+                            </li>*@
 
                         <li class="active">
                             <a href="#horizontal_tab3" data-toggle="tab">
@@ -413,7 +409,7 @@
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker2.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">JAMES ROCK</h3>
+                    <h3 class="name">سخنران</h3>
                     <p class="text-alt"><small>VP Product  Flopbox</small></p>
                     <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                     <ul class="speaker-socials">
@@ -426,54 +422,12 @@
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker3.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">ANDREA WARRAETY</h3>
-                    <p class="text-alt"><small>Designer  Winstagrap</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker3.jpg" alt="دکتر کامران صحت" class="img-responsive"></div>
+                    <h3 class="name">دکتر کامران صحت</h3>
+                    <p class="text-alt"><small>مدرس و مشاور برترین برندهای داخلی و بین المللی</small></p>
+                    <p class="about">دکتر کامران صحت متولد 24/03/1353 در شهر تهران می باشد. ایشان دارای مدرک لیسانس مترجمی زبان انگلیسی از دانشگاه آزاد اسلامی واحد تهران مرکز و مدرک MBA گرایش بازاریابی و مدرک DBA گرایش بازاریابی از لندن می باشند.</p>
                     <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker4.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">MARTIN BRANSON</h3>
-                    <p class="text-alt"><small>Evangelist  Doogle</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker5.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">AMY WARNER</h3>
-                    <p class="text-alt"><small>Graphic Designer</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker6.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">ALEC KROSOVIC</h3>
-                    <p class="text-alt"><small>Project Manager</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="#"><span class="fa fa-facebook-official"></span></a></li>
                         <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                     </ul>
@@ -481,8 +435,53 @@
             </div>
         </div>
     </section>
-    <section class="section align-center overlay overlay-clr light-text">
-    </section>
+    <div class="container">
+        <center>
+            <span class="icon section-icon icon-faces-users-03"></span>
+            <h3>عوامل برگزار کننده</h3>
+        </center>
+        <div class="col-sm-4">
+            <div class="speaker">
+                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker4.jpg" alt="John Doe" class="img-responsive"></div>
+                <h3 class="name">MARTIN BRANSON</h3>
+                <p class="text-alt"><small>Evangelist  Doogle</small></p>
+                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <ul class="speaker-socials">
+                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="speaker">
+                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker5.jpg" alt="John Doe" class="img-responsive"></div>
+                <h3 class="name">AMY WARNER</h3>
+                <p class="text-alt"><small>Graphic Designer</small></p>
+                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <ul class="speaker-socials">
+                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="speaker">
+                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker6.jpg" alt="John Doe" class="img-responsive"></div>
+                <h3 class="name">ALEC KROSOVIC</h3>
+                <p class="text-alt"><small>Project Manager</small></p>
+                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <ul class="speaker-socials">
+                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <section id="schedule" class="section schedule-section align-center">
         <div class="container">
             <span class="icon section-icon icon-office-21"></span>
@@ -896,17 +895,6 @@
 
     <section id="register" class="section overlay overlay-clr bg-cover bg4 light-text align-center">
         <div class="container">
-            <h2>Register to Ventcamp now!</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. took a galley of type and scrambled it to make a type.</p>
-            <br>
-            <br>
-
-            <a href="#" class="btn btn-lg btn-outline">Register</a>
-        </div>
-    </section>
-
-    <section id="sponsors" class="section align-center">
-        <div class="container">
             <span class="icon section-icon icon-documents-bookmarks-12"></span>
             <h3>اسپانسرهای اصلی</h3>
             <p class="text-alt">شرکت هایی که از ما حمایت می کنند</p>
@@ -951,6 +939,7 @@
         </div>
     </section>
 
+
     <section id="contacts">
         <div class="contacts-wrapper">
             <div id="contacts-map" class="map" data-settings="map-settings.json" style="height:560px;"></div>
@@ -961,7 +950,7 @@
                     <ul class="list">
                         <li><i class="fa fa-map-marker"></i>تبریز- چایکنار- روبروی شهرداری منطقه یک- طبقه نه</li>
                         <li><i class="fa fa-envelope"></i>event@negahglobal.com</li>
-                        <li><i class="fa fa-phone"></i>33377911 (+98)</li>
+                        <li><i class="fa fa-phone"></i>041-33377911 (+98)</li>
                         <li><i class="fa fa-clock-o"></i>8:00 - 22:00</li>
                     </ul>
                 </div>
@@ -974,7 +963,7 @@
 
             <div class="col-md-4">
                 <div class="widget about-widget">
-                    <h6 class="widget-head">About <span class="highlight">Ventcamp</span></h6>
+                    <h6 class="widget-head">پیام مدیر عامل <span class="highlight">هلدینگ نگاه</span></h6>
                     <p class="text-alt"><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</small></p>
 
                     <img src="assets/img/autograph-143x105.png" alt="autograph">
@@ -1025,27 +1014,16 @@
         </div>
 
         <div class="footer-base">
-            <div class="container">
-
-                <div class="col-md-6">
-                    <ul class="footer-nav">
-                        <li class="footer-nav-item"><a href="#">Contact</a></li>
-                        <li class="footer-nav-item"><a href="#">Privacy policy</a></li>
-                        <li class="footer-nav-item"><a href="#">Press</a></li>
+            <div class="container">    
+                <div class="col-md-12 align-center">
+                    <ul class="socials-nav align-c">
+                        <li class="socials-nav-item"><a href="https://www.twitter.com/negah_event"><span class="fa fa-twitter"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://www.facebook.com/negah_event"><span class="fa fa-facebook"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://www.linkedin.com/company/negah-event"><span class="fa fa-linkedin"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://www.youtube.com/negah_event"><span class="fa fa-youtube"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://www.instagram.com/negah_event"><span class="fa fa-instagram"></span></a></li>
                     </ul>
-                </div>
-
-                <div class="col-md-6 align-right">
-                    <ul class="socials-nav align-right">
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-github"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-vimeo-square"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-instagram"></span></a></li>
-                    </ul>
-
-                    <p class="text-alt"><small>All&nbsp;Rights Reserved ©&nbsp;2015</small></p>
+                    <p class="text-alt"><small>تمام حقوق این سایت متعلق به هلدینگ نگاه میباشد.©</small></p>
                 </div>
 
             </div>
