--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>نگاه-برگزارکننده ایونت</title>
 
-    <meta name="description" content="PSD to HTML5+CSS3 conversion.">
-    <meta name="keywords" content="PSD, HTML5, CSS3">
-    <meta name="author" content="Vivaco">
+    <meta name="description" content="برگزار کننده همایش ایونت رویداد نگاه">
+    <meta name="keywords" content="همایش, ایونت, رویداد, نگاه, negah, event">
+    <meta name="author" content="هلدینگ نگاه">
 
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
