--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
                 </br>
                 <center><img src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="350" height="350" class="img-responsive"></center>
 
-                
+
                 <div class="btns-container">
                     <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
                     <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
@@ -82,9 +82,9 @@
                         <ul class="navigation-list pull-left light-text">
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">تماس با ما</a></li>
                             <li class="navigation-item"><a href="#speakers" class="navigation-link">سخنرانان</a></li>
-                            <li class="navigation-item"><a href="#schedule" class="navigation-link">زمانبندی</a></li>
-                            <li class="navigation-item"><a href="#prices" class="navigation-link">قیمت ها</a></li>
-                            <li class="navigation-item"><a href="#gallery" class="navigation-link">گالری</a></li>
+                            <li class="navigation-item"><a href="#schedule" class="navigation-link">برنامه ها</a></li>
+                            <li class="navigation-item"><a href="#prices" class="navigation-link">بلیط ها</a></li>
+                            <!--<li class="navigation-item"><a href="#gallery" class="navigation-link">گالری</a></li>-->
                             <li class="navigation-item"><a href="#sponsors" class="navigation-link">اسپانسرها</a></li>
 
                             @*<li class="navigation-item dropdown">
@@ -122,28 +122,28 @@
             <span class="icon section-icon icon-multimedia-12"></span>
             <h3>درباره نگاه</h3>
             <p class="text-alt">نگاه، برگزار کننده ایونت های بزرگ در سطح ایران و بین الملل</p>
-            <br>
-            <br>
+
+            <div class="tabs-wrapper tabs-horizontal">
+                <div class="tab-content">
+                    <div id="horizontal_tab2" class="tab-pane fade active in">
+                        <div class="col-sm-5 img-column">
+                            <img src="assets/img/negahLogo.png" alt="" class="img-responsive">
+                        </div>
+                        <div class="col-sm-7 align-right">
+                            <p>برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار سالۀ او در هر مراحل جاودانگی آدمی در رسیدن به هویت بوده است. جامعه‌‌ای که ورای ساختار کالبد خود، نشان از روح و حس معنایی در وجودیت آفرینشات هم‌‌سو با نیاز انسان امروزی با اهداف بهره‌‌مندی و شکوفایی در جهت تحققات که نمایان‌‌گر آرمان‌‌های سازندگان آن است به‌‌شمار می‌‌آید. </p>
+                            <div class="btns-container">
+                                <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
 
             <div class="tabs-wrapper tabs-horizontal">
                 <div class="nav-wrapper">
-                    <span class="nav-current">
-                        <h6 class="heading-alt"><span class="fa fa-code"></span> General info</h6>
-                    </span>
                     <ul class="nav nav-tabs">
-
-                        @*<li>
-                                <a href="#horizontal_tab1" data-toggle="tab">
-                                    <h6 class="heading-alt"><span class=""></span> </h6>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#horizontal_tab2" data-toggle="tab">
-                                    <h6 class="heading-alt"><span class=""></span> </h6>
-                                </a>
-                            </li>*@
-
                         <li class="active">
                             <a href="#horizontal_tab3" data-toggle="tab">
                                 <h6 class="heading-alt"><span class="fa fa-external-link"></span> درباره همایش</h6>
@@ -153,57 +153,15 @@
                 </div>
 
                 <div class="tab-content">
-                    <!-- <div id="horizontal_tab1" class="tab-pane fade active in">
-                                                <div class="col-sm-5 img-column">
-                                                    <img src="assets/img/imac-371x412.png" alt="" class="img-responsive">
-                                                </div>
-                                                <div class="col-sm-7 align-left">
-                                                    <h6>About event</h6>
-                                                    <p>Faucibus sed pretium. Ridiculus <strong>consectetuer</strong> et. In arcu enim sit in libero scelerisque mauris sed. Nullam eleifend in varius arcu vitae feugiat magna id ut morbi consectetuer. In vivamus arcu. Id ut dui. Sed massa in. Scelerisque suscipit quisque maecenas aliquet in. Wisi mi ipsum. Elit et mauris. Duis in magni praesent <a href="#">content</a> massa.</p>
-                                                    <p>Consectetuer amet wisi felis sem <strong>tincidunt</strong>. Ultricies blandit id euismod inceptos mauris pulvinar nec nullam quisque consequat nulla eleifend elementum vivamus aliquam placerat nec. Vehicula leo praesent vitae leo mauris ullamcorper lectus sed mollis id turpis dui cras suspendisse. Porta diam <a href="#">eleifend</a>. Praesent magnis sit. Enim ligula vel justo urna.</p>
-                                                    <ul>
-                                                        <li>Nisl cras vitae wisi odio amet.</li>
-                                                        <li>Lacus amet vestibulum belas</li>
-                                                        <li>Quis nunc curabitur assumenda</li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                    -->
                     <div id="horizontal_tab2" class="tab-pane fade active in">
                         <div class="col-sm-7 align-right">
                             <h6>شوالیه مدیران برتر چیست؟</h6>
-                            <p>همایش شوالیه مدیران برتر با هدف ایجاد بستری برای تعامل و به اشتراک گذاری تجربه های مدیران و لیدرهای برتر کشور در زمینه های مختلف برگزار میشود. در این همایش با معرفی برندها و خدمات شرکت کنندگان عزیز، تلاش می شود تا همکاری بین صنایع و خدمات ایران تسهیل شود.</p>
-                            <p>شوالیه مدیران برتر فرصتی برای بهره مندی از نکات آموزشی یکی از برجسته ترین اساتید در زمینه مدیریت و برندینگ خواهد بود. همچنین این همایش بزرگ تریبونی خواهد بود برای برخی از شرکت کنندگان محترم تا با زبان خود هر آنچه را که میخواهند با دیگران به اشتراک بگذارند.</p>
-                            <p>این همایش فرصتی برای ملاقات چهره به چهره در محیطی صمیمی را فراهم خواهد آورد.</p>
-                            <p>تلاش ما این است که این همایش بزرگ برای شرکت کنندگان عزیز، تبدیل به یک رزومه مثبت در راستای رشد و پیشرفت صنایع و خدمات آنها شود.</p>
-                            <p>با رسانه ای شدن شوالیه مدیران برتر، فرصت بهتر دیده شدن همایش برای کل ایران فراهم خواهد شد.</p>
-                            <!-- <ul>
-                                <li>Nisl cras vitae wisi odio amet.</li>
-                                <li>Lacus amet vestibulum belas</li>
-                                <li>Quis nunc curabitur assumenda</li>
-                            </ul>-->
+                            <p>همایش سراسری کنسرسیوم نگاه با یک هدف واحد و افق‌‌های نوین در آموزش درپی کشف و خلق آن با رهنمودهای مطابق و حوزه‌‌های مختلف در ارتقای اجرایی‌‌سازی در راستای رویکردهای زمینه‌‌ساز با افق‌‌های نگرشی امید است زمینه‌‌ای گسترده در پیشبرد طرح‌‌های علمی - عملی و فرهنگی کشور مؤثر واقع گردد. از این‌‌رو کنسرسیوم نگاه در راستای بررسی و تحقق موارد فوق‌‌الذکر قصد دارد همایش سراسری را تحت‌‌عنوان شوالیه‌‌های مدیران به‌‌دنبال آن است كه با گردهم‌‌آوردن مدیران برجسته و موفق، صاحب‌‌نظران، انديشمندان، دانشگاهيان، سياست‌‌گزاران، سازمان‌‌هاي ذي‌‌ربط، مهندسين مشاور متخصصان و علاقه‌‌مندان به این حوزه، به تبيين مفاهيم و اهداف مرتبط با محورهای همایش بپردازد در تجلیل از مدیران مفید واقع گردد و فرصتی مناسب برای تبادل  اطلاعات و ارائۀ همکارهای لازم به‌‌عمل آید.</p>
                         </div>
-
                         <div class="col-sm-5 img-column">
                             <img src="assets/img/imac-371x412.png" alt="" class="img-responsive">
                         </div>
                     </div>
-
-                    <!-- <div id="horizontal_tab3" class="tab-pane fade active in">
-                        <div class="col-sm-5 img-column">
-                            <img src="assets/img/imac-371x412.png" alt="" class="img-responsive">
-                        </div>
-                        <div class="col-sm-7 align-left">
-                            <h6>Sponsors apply</h6>
-                            <p>Faucibus sed pretium. Ridiculus <strong>consectetuer</strong> et. In arcu enim sit in libero scelerisque mauris sed. Nullam eleifend in varius arcu vitae feugiat magna id ut morbi consectetuer. In vivamus arcu. Id ut dui. Sed massa in. Scelerisque suscipit quisque maecenas aliquet in. Wisi mi ipsum. Elit et mauris. Duis in magni praesent <a href="#">content</a> massa.</p>
-                            <ul>
-                                <li>Nisl cras vitae wisi odio amet.</li>
-                                <li>Lacus amet vestibulum belas</li>
-                                <li>Quis nunc curabitur assumenda</li>
-                            </ul>
-                        </div>
-                    </div>
-                    -->
                 </div>
             </div>
         </div>
@@ -834,31 +792,13 @@
             <br>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="package-column">
-                        <h6 class="package-title">Early Bird</h6>
-                        <div class="package-price">
-                            <span class="currency">$</span>33
-                        </div>
 
-
-                        <div class="package-detail">
-                            <ul>
-                                <li><span class="fa fa-check check-icon"></span>Regular Seating</li>
-                                <li><span class="fa fa-check check-icon"></span>Free Snacks</li>
-                                <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn btn-lg btn-outline-clr">Buy now</a>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="package-column special-column">
-                        <span class="sale-label uppercase">Hot!</span>
-                        <h6 class="package-title">Silver Pass</h6>
+                        <span class="sale-label uppercase">ویژه!</span>
+                        <h6 class="package-title">Special</h6>
                         <div class="package-price">
-                            <span class="currency">$</span>99
+                            <span class="currency">تومان</span>99
                         </div>
                         <div class="package-detail">
                             <ul>
@@ -867,15 +807,16 @@
                                 <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-lg">Buy now</a>
+                        <a href="#" class="btn btn-lg">جزئیات و رزرو</a>
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+
+                <div class="col-sm-3">
                     <div class="package-column">
-                        <h6 class="package-title">Gold Pass</h6>
+                        <h6 class="package-title">Gold</h6>
                         <div class="package-price">
-                            <span class="currency">$</span>150
+                            <span class="currency">تومان</span>150
                         </div>
                         <div class="package-detail">
                             <ul>
@@ -884,9 +825,47 @@
                                 <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-lg btn-outline-clr">Buy now</a>
+                        <a href="#" class="btn btn-lg btn-outline-clr">جزئیات و رزرو</a>
                     </div>
                 </div>
+
+
+                <div class="col-sm-3">
+                    <div class="package-column">
+                        <h6 class="package-title">Silver</h6>
+                        <div class="package-price">
+                            <span class="currency">تومان</span>33
+                        </div>
+                        <div class="package-detail">
+                            <ul>
+                                <li><span class="fa fa-check check-icon"></span>Regular Seating</li>
+                                <li><span class="fa fa-check check-icon"></span>Free Snacks</li>
+                                <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-lg btn-outline-clr" data-modal-link="silverPackage">جزئیات و رزرو</a>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-3">
+                    <div class="package-column">
+                        <h6 class="package-title">Bronze</h6>
+                        <div class="package-price">
+                            <span class="currency">تومان</span>33
+                        </div>
+                        <div class="package-detail">
+                            <ul>
+                                <li><span class="fa fa-check check-icon"></span>Regular Seating</li>
+                                <li><span class="fa fa-check check-icon"></span>Free Snacks</li>
+                                <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-lg btn-outline-clr">جزئیات و رزرو</a>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
@@ -1014,7 +993,7 @@
         </div>
 
         <div class="footer-base">
-            <div class="container">    
+            <div class="container">
                 <div class="col-md-12 align-center">
                     <ul class="socials-nav align-c">
                         <li class="socials-nav-item"><a href="https://www.twitter.com/negah_event"><span class="fa fa-twitter"></span></a></li>
@@ -1082,6 +1061,57 @@
 
         </div>
     </div>
+
+
+    <div class="modal-window" data-modal="about" style="background-color: rgba(2, 2, 2, 0.85);">
+        <div class="modal-box small animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;">
+            <span class="close-btn icon icon-office-52"></span>
+
+            <h5 class="align-center"><span class="highlight">درباره نگاه</span></h5>
+            <p dir="rtl">
+                برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار سالۀ او در هر مراحل جاودانگی آدمی در رسیدن به هویت بوده است. جامعه‌‌ای که ورای ساختار کالبد خود، نشان از روح و حس معنایی در وجودیت آفرینشات هم‌‌سو با نیاز انسان امروزی با اهداف بهره‌‌مندی و شکوفایی در جهت تحققات که نمایان‌‌گر آرمان‌‌های سازندگان آن است به‌‌شمار می‌‌آید. معنایی که بالاتر از بایدهای زیست انسان تبلوری از هستی بی‌‌نهایت طلب بشر و تلاش او برای تجسم بخشیدن به ارزش‌‌های معنوی‌‌اش در جهت کمال بیان می‌‌شود. به‌‌طوری‌‌که چنین جامعه‌‌ای اصالتی دارد که به آن هویت می‌‌بخشد و فارغ از دغدغه‌‌های زیستی زمینه‌‌ای برای پدیداری در جهت تعالی آدمی با پشتوانۀ معنای نهفته در سازمان خود، با نیازهای ساکنینش هم‌‌سو می‌‌گردد. حیات هر جامعه در شهرهای آن نیاز پاسخگویی به توفیقات در رابطه به‌‌همین نیازهاست. از این رو «کنسرسیوم نگاه»، با یک نگاهی بدون حدومرز و به‌‌ویژه منحصربه‌‌فرد مطابق با چارچوب ملی به‌‌دنبال خلق ایده با ابعاد وسیع در تبیین ابعاد گسترده با اصلی‌‌ترین معضل انسان در آموزش به‌‌شمار می‌‌آید چراکه وجود آن در جهت خلق نیاز بشر با بهره‌‌گیری از دست‌‌آوردهای انسان امروزی که وارث پیشینیانمان تلقی می‌‌گردد باتوجه به نیازهای مادی و معنوی خود و با بهره‌‌گیری از فن‌‌آوری‌‌های نوین و با رویکردی آینده‌‌نگر در ساختار جامعه، فراتر از یک عنوان در رسیدن به آفریدن فضاها در محیط مانند مجموعه‌‌ای نمایشگاهی به‌‌تماشای مخاطبان به‌‌نمایش گذاشته به‌‌عمل برخوردار گردد.
+            </p>
+
+
+        </div>
+    </div>
+
+
+    <div class="modal-window" data-modal="silverPackage" style="background-color: rgba(2, 2, 2, 0.85);">
+        <div class="modal-box  animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;">
+            <span class="close-btn icon icon-office-52"></span>
+
+           <h5 class="align-center"><span class="highlight">پکیج نقره ای</span></h5>
+           <div class="col-sm-20">
+               <div class="package-columnTicket">
+                   <div class="package-price">
+                       <span class="currency">تومان</span>33
+                   </div>
+                   <div class="package-detail">
+                       <ul>
+                           <li><span class="fa fa-check check-icon"></span>Regular Seating</li>
+                           <li><span class="fa fa-check check-icon"></span>Free Snacks</li>
+                           <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
+                       </ul>
+                   </div>
+                   <div class="package-detail">
+                       <ul>
+                           <li><span class="fa fa-check check-icon"></span>Regular Seating</li>
+                           <li><span class="fa fa-check check-icon"></span>Free Snacks</li>
+                           <li><span class="fa fa-check check-icon"></span>Custom Badge</li>
+                       </ul>
+                   </div>
+                   <a href="#" class="btn btn-lg btn-outline-clr" data-modal-link="silverPackage">جزئیات و رزرو</a>
+               </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+
 
     <div class="modal-window" data-modal="0" style="background-color: rgba(2, 2, 2, 0.85);">
         <div class="modal-box iframe-box iframe-video">
