--- a/Reservation/wwwroot/assets/css/style.css
+++ b/Reservation/wwwroot/assets/css/style.css
@@ -3993,7 +3993,7 @@ li {
         min-width: 200px;
         padding: 26px 40px 23px;
         font-size: 15px;
-        letter-spacing: 0.4em;
+        font-family: Tahoma;
     }
 
     .btn.btn-sm {
@@ -4021,6 +4021,7 @@ li {
         .header.header-color .navigation-header .buy-btn.btn-lg,
         .header .buy-btn.btn-lg {
             padding: 25px 39px 22px;
+            
         }
 
         .btn.btn-outline.btn-sm,
@@ -4150,6 +4151,7 @@ button.btn.btn-block {
     .btn.btn-rounded.btn-lg {
         border-radius: 30px;
         padding: 24px 39px 21px;
+
     }
 
     .btn.btn-rounded.btn-sm {
@@ -4238,6 +4240,7 @@ button.btn.btn-block {
             .btn.btn-rounded.btn-lg {
                 padding-left: 19px;
                 padding-right: 19px;
+
             }
 
             .btn.btn-rounded.btn-sm {
@@ -6084,6 +6087,19 @@ button[type="submit"] .loading {
 /* ----------------------------------------------------------------------------
     Prices column
 ---------------------------------------------------------------------------- */
+.package-columnTicket {
+    -webkit-transition: background 0.25s ease-in-out;
+    -moz-transition: background 0.25s ease-in-out;
+    -o-transition: background 0.25s ease-in-out;
+    transition: background 0.25s ease-in-out;
+    position: relative;
+    max-width: 869px;
+    padding: 47px 15px 43px;
+    text-align: center;
+    border: 1px solid #e9e9e9;
+    overflow: hidden;
+}
+
 .package-column {
     -webkit-transition: background 0.25s ease-in-out;
     -moz-transition: background 0.25s ease-in-out;
