--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -44,24 +44,34 @@
         <div class="heading-block centered-block align-center">
 
             <div class="container">
-                <h5 class="heading-alt" style="margin-bottom: 8px;">
-                    بیست و سوم آبان 1399
-                    &nbsp; &nbsp; &nbsp; &nbsp;   <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span>
-                    تهران- سالن همایش های بین المللی صدا و سیما
-                    <span class="fa fa-calendar-o base-clr-txt"></span>
-                </h5>
-                </br>
-                <center><img src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="350" height="350" class="img-responsive"></center>
 
 
-                <div class="btns-container">
-                    <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
-                    <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
+                <div class="col-sm-5 col-xs-12 navigation-header" style="padding: 0;">
+                    <p>
+                        </br></br></br></br>
+                        <h5 class="heading-alt" style="margin-bottom: 8px; vertical-align:middle">
+                            بیست و سوم آبان 1399
+                            <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span>
+                            </br>
+                            تهران- سالن همایش های بین المللی صدا و سیما
+                            <span class="fa fa-calendar-o base-clr-txt"></span>
+                        </h5>
+                    </p>
                 </div>
-            </div>
-        </div>
+                <div class="col-sm-5 col-xs-10 navigation-header" style="padding: 0;" >
+                    <p style="text-align:right" dir="rtl">
+                        <img  src="assets/img/logoKnight.png" alt="شوالیه مدیران برتر" width="350" height="350" class="img-responsive">
+                    </p>
+                </div>
 
-    </section>
+            </div>
+            <div class="btns-container">
+                <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
+                <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
+            </div>
+
+
+</section>
 
     <header class="header header-black fixed" style="min-height: 100px;">
         <div class="header-wrapper">
