--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -791,9 +791,9 @@
             <p class="text-alt">نوع بلیط خود را انتخاب کنید</p>
             <br>
 
-            <div class="row">
+            <div class="row" id="MeetingTicketTypeDiv">
 
-                <div class="col-sm-3">
+                @*<div class="col-sm-3">
                     <div class="package-column special-column">
                         <span class="sale-label uppercase">ویژه!</span>
                         <h6 class="package-title">Special</h6>
@@ -863,7 +863,7 @@
                         </div>
                         <a href="#" class="btn btn-lg btn-outline-clr">جزئیات و رزرو</a>
                     </div>
-                </div>
+                </div>*@
 
 
             </div>
