--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -965,26 +965,26 @@
             </div>
 
             <div class="col-md-4 col-lg-3 col-lg-offset-1">
-                <div class="widget twitter-widget">
-                    <h6 class="widget-head"><span class="fa fa-twitter"></span> Twitter Feed</h6>
+                <!--<div class="widget twitter-widget">
+        <h6 class="widget-head"><span class="fa fa-twitter"></span> Twitter Feed</h6>
 
-                    <ul class="tweets-list">
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">Grabehan <a href="#">#NowPlaying</a> Future People by Alabama Shakes <a href="http://spoti.fi/1CTPWcW">http://spoti.fi/1CTPWcW</a></p>
-                            <small class="tweet-date">7 sep 2015</small>
-                        </li>
+        <ul class="tweets-list">
+            <li class="tweet">
+                <p class="text-alt tweet-text">Grabehan <a href="#">#NowPlaying</a> Future People by Alabama Shakes <a href="http://spoti.fi/1CTPWcW">http://spoti.fi/1CTPWcW</a></p>
+                <small class="tweet-date">7 sep 2015</small>
+            </li>
 
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">Loving <a href="#"></a> so far. Ghost theming here I come!</p>
-                            <small class="tweet-date">8 sep 2015</small>
-                        </li>
+            <li class="tweet">
+                <p class="text-alt tweet-text">Loving <a href="#"></a> so far. Ghost theming here I come!</p>
+                <small class="tweet-date">8 sep 2015</small>
+            </li>
 
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">We didn't set out to be superheroes. But sometimes, life doesn't go the way you planned. <a href="#">#TI5</a> <a href="#">#BleedBlue</a></p>
-                            <small class="tweet-date">9 sep 2015</small>
-                        </li>
-                    </ul>
-                </div>
+            <li class="tweet">
+                <p class="text-alt tweet-text">We didn't set out to be superheroes. But sometimes, life doesn't go the way you planned. <a href="#">#TI5</a> <a href="#">#BleedBlue</a></p>
+                <small class="tweet-date">9 sep 2015</small>
+            </li>
+        </ul>
+    </div>-->
             </div>
 
             <div class="col-md-4 col-lg-3 col-lg-offset-1">
