--- a/Reservation/Views/Home/VerifyPayment.cshtml
+++ b/Reservation/Views/Home/VerifyPayment.cshtml
@@ -22,6 +22,7 @@
                 <div id="successpayment" style="display: none;">
                     <img src="/assets/img/SuccessPay.png" style="width: 150px; height: 150px">
                     <h1> پرداخت <span class="highlight">موفق</span></h1>
+                    <h3> شماره بلیط :  <span class="highlight" id="ticketNo"></span></h3>
                 </div>
                 <div id="failurepayment" style="display: none;">
                     <img src="/assets/img/ErrorPay.png" style="width: 150px; height: 150px">
